syntax = "proto3";

package ibc.core.channel.v2;

option go_package = "github.com/cosmos/ibc-go/v9/modules/core/04-channel/v2/types";

import "ibc/core/channel/v2/channel.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

// Query provides defines the gRPC querier service
service Query {
  // Channel queries the counterparty of an IBC client.
  rpc Channel(QueryChannelRequest) returns (QueryChannelResponse) {
    option (google.api.http).get = "/ibc/core/channel/v2/channel/{channel_id}";
  }
}

// QueryChannelRequest is the request type for the Query/Channel RPC method
message QueryChannelRequest {
  string channel_id = 1;
}

// QueryChannelRequest is the response type for the Query/Channel RPC method
message QueryChannelResponse {
  string  creator = 1;
  Channel channel = 2 [(gogoproto.nullable) = false];
}
